--- a/404.html
+++ b/404.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>Redirecting...</title>
     <script>
-      // Redirige todas las rutas no encontradas a index.html
-      sessionStorage.redirect = location.pathname;
-      window.location.href = '/Tickets/'; // Ajusta esta ruta según tu repositorio
+      // Verifica si la ruta actual no es la raíz
+      if (window.location.pathname !== '/Tickets/') {
+        // Guarda la ruta original en sessionStorage
+        sessionStorage.redirect = window.location.pathname;
+        // Redirige a la raíz de la aplicación
+        window.location.href = '/Tickets/';
+      }
     </script>
   </head>
   <body>
