--- a/404.html
+++ b/404.html
@@ -2,13 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Redireccionando...</title>
-  <script>
-    // Almacenar la URL original a la que el usuario intentó acceder
-    sessionStorage.redirect = location.href;
-    
-    // Redireccionar a la página principal
-    location.href = "/Tickets/";
+  <title>Tickets</title>
+  <script type="text/javascript">
+    // Redireccionamiento para GitHub Pages
+    (function(l) {
+      if (l.search[1] === '/' ) {
+        var decoded = l.search.slice(1).split('&').map(function(s) { 
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
   </script>
 </head>
 <body>
