--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <script type="text/javascript">
-      // Redireccionamiento para GitHub Pages
-      (function(l) {
-        if (l.search[1] === '/') {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
-            return s.replace(/~and~/g, '&')
-          }).join('?');
-          window.history.replaceState(null, null,
-              l.pathname.slice(0, -1) + decoded + l.hash
-          );
-        }
-      }(window.location))
+    <script>
+      // Redirigir si la URL no comienza con /api/
+      if (!window.location.pathname.startsWith('/api/') && 
+          !window.location.pathname.includes('.')) {
+        window.location.href = '/api' + window.location.pathname;
+      }
     </script>
   </head>
   <body>
